--- a/app/views/includes/foot.jade
+++ b/app/views/includes/foot.jade
@@ -18,8 +18,10 @@ script(type='text/javascript', src='/js/filters.js')
 //Application Services
 script(type='text/javascript', src='/js/services/global.js')
 script(type='text/javascript', src='/js/services/articles.js')
+script(type='text/javascript', src='/js/services/locations.js')
 
 //Application Controllers
+script(type='text/javascript', src='/js/controllers/locations.js')
 script(type='text/javascript', src='/js/controllers/articles.js')
 script(type='text/javascript', src='/js/controllers/index.js')
 script(type='text/javascript', src='/js/controllers/header.js')
